--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "dolarapp",
+  "name": "MyBolsillo",
   "version": "1.1.1",
-  "description": "dolarApp: An Ionic project",
+  "description": "Organiza todos tus ingresos y egresos de dinero, tanto en pesos como en dolares!",
   "dependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^2.0.4",
